# screen-cast

./: .gitignore  Cargo.toml  Clippy.toml  H264_ENCODER_IMPLEMENTATION.md  README.md
benchmarks/: run_perf_tests.ps1  scenarios.json
benchmarks/results/: latest.json  latest.md
bins/perf_harness/: Cargo.toml
bins/perf_harness/src/: lib.rs  main.rs  report.rs  rng.rs  scenario.rs  simulation.rs
bins/receiver/: Cargo.toml  README.md  build.rs
bins/receiver/src/: config.rs  lib.rs  main.rs  metrics.rs  pipeline.rs  render.rs  render_stub.rs
bins/sender/: Cargo.toml  build.rs
bins/sender/src/: config.rs  lib.rs  main.rs  metrics.rs  pipeline.rs  ui.rs
bins/sender/tests/: mock_pipeline.rs
crates/capture/: Cargo.toml  build.rs
crates/capture/src/: lib.rs
crates/capture/tests/: dxgi.rs
crates/codec/: Cargo.toml  IMPLEMENTATION.md  README.md  build.rs
crates/codec/examples/: basic_h264_encode.rs
crates/codec/src/: h264.rs  lib.rs
crates/codec/tests/: h264_decoder_test.rs  h264_encoder_test.rs
crates/network/: Cargo.toml  build.rs
crates/network/src/: lib.rs
crates/shared/: Cargo.toml  build.rs
crates/shared/src/: error.rs  lib.rs
docs/performance/: README.md
