[workspace]
members = [
    "crates/shared",
    "crates/capture",
    "crates/codec",
    "crates/network",
    "bins/sender",
    "bins/receiver",
    "bins/perf_harness",
]
resolver = "2"

[workspace.package]
edition = "2021"
rust-version = "1.72"
license = "MIT OR Apache-2.0"

[workspace.dependencies]
thiserror = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt", "env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.37", features = ["macros", "rt-multi-thread", "sync", "time", "net"] }
tokio-stream = { version = "0.1", features = ["sync"] }
egui = { version = "0.26" }
eframe = { version = "0.26", default-features = false, features = ["wgpu", "default_fonts", "egui_plot"] }
windows = { version = "0.58", features = [
    "Win32_Foundation",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Ole",
    "Win32_System_Threading",
    "Win32_Graphics_Direct3D",
    "Win32_Graphics_Direct3D11",
    "Win32_Graphics_Dxgi",
    "Win32_Media_MediaFoundation",
] }
