[package]
name = "perf_harness"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../../crates/shared", default-features = false }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
tracing = { workspace = true }
chrono = { version = "0.4", default-features = false, features = ["clock", "std"] }
