[package]
name = "sender"
version = "0.1.0"
edition = "2021"

[dependencies]
capture = { path = "../../crates/capture" }
codec = { path = "../../crates/codec" }
network = { path = "../../crates/network" }
shared = { path = "../../crates/shared", default-features = false, features = ["win32", "runtime", "ui"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
