[package]
name = "sender"
version = "0.1.0"
edition = "2021"

[features]
default = ["gui"]
gui = ["dep:eframe", "dep:egui", "shared/ui"]

[dependencies]
capture = { path = "../../crates/capture" }
codec = { path = "../../crates/codec" }
network = { path = "../../crates/network" }
shared = { path = "../../crates/shared", default-features = false, features = ["win32", "runtime"] }
tokio = { workspace = true }
tokio-stream = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4.5", features = ["derive"] }
egui = { workspace = true, optional = true }
eframe = { workspace = true, optional = true }
