[package]
name = "capture"
version = "0.1.0"
edition = "2021"

[features]
default = ["dxgi", "runtime"]
win32 = ["dep:windows", "shared/win32"]
runtime = ["dep:tokio", "dep:tokio-stream", "shared/runtime"]
dxgi = ["win32"]

[dependencies]
shared = { path = "../shared", default-features = false }
tracing = { workspace = true }
windows = { workspace = true, optional = true }
tokio = { workspace = true, optional = true }
tokio-stream = { workspace = true, optional = true }
